# services-memcache

./: .gitlab-ci.yml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: memcache.py
nagare/services/: memcache.py
src/nagare/admin/: memcache.py
src/nagare/services/: memcache.py
