[metadata]
name = nagare-services-memcache
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Memcache service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-memcache
    Tracker = https://github.com/nagareproject/services-memcache/issues

[options]
zip_safe = False
packages = find:
install_requires =
    python-memcached
    nagare-server

[options.entry_points]
nagare.commands =
    memcache = nagare.admin.memcache:Commands

nagare.commands.memcache =
    flush = nagare.admin.memcache:Flush
    stats = nagare.admin.memcache:Stats
    report = nagare.admin.memcache:Report

nagare.services =
    memcache = nagare.services.memcache:Memcache

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
